# TempoTokens

./: .gitignore  Taskfile.yml  data_test.ipynb  datadownloader.py  download_beat.sh  extract_sound.py  inference.py  pyproject.toml  repomix-output.txt  test.py  train.py  train.sh
configs/v2/: audioset_drum.yaml
modules/text_encoder/: modeling_clip_tempotokens.py
utils/: dataset.py
