[project]
name = "tempotokens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "compel>=2.0.3",
    "datasets>=3.2.0",
    "decord>=0.6.0",
    "diffusers==0.31.0",
    "einops>=0.8.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "lora-diffusion",
    "moviepy==1.0.3",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "positional-encodings>=6.0.4",
    "pydantic>=2.10.4",
    "pytube>=15.0.0",
    "safetensors>=0.4.5",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "yt-dlp>=2024.12.23",
]

[tool.uv.sources]
lora-diffusion = { git = "https://github.com/cloneofsimo/lora.git" }
